# krunner-qalculator

./: CMakeLists_root.txt  QWEN.md  README.md  install.sh  postinst
src/: CMakeLists.txt  qalculatorrunner.cpp  qalculatorrunner.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_qalculatorrunner.cpp
tests/qalculatorrunner_lib_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
tests/qalculatorrunner_lib_autogen/YCDLW3T4OG/: moc_qalculatorrunner.cpp  moc_qalculatorrunner.cpp.d
tests/test_qalculatorrunner_autogen/: deps  moc_predefs.h
tests/test_qalculatorrunner_autogen/include/: test_qalculatorrunner.moc  test_qalculatorrunner.moc.d
